--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
     </script>
 
        <style>
-        body {
+            body {
             font-family: 'Plus Jakarta Sans', sans-serif;
             background-color: #011111;
             color: white;
@@ -43,12 +43,6 @@
         }
         h1, h2, h3, .font-accent {
             font-family: 'Space Grotesk', sans-serif;
-        }
-        .glow-green {
-            box-shadow: 0 0 20px rgba(142, 205, 36, 0.15);
-        }
-        .glow-green-strong {
-            box-shadow: 0 0 35px rgba(142, 205, 36, 0.3);
         }
         .glass {
             background: rgba(11, 28, 28, 0.6);
@@ -65,25 +59,25 @@
             background: #8ecd24;
             border-radius: 10px;
         }
-        /* Fix for datetime-local appearance in dark mode */
         input[type="datetime-local"]::-webkit-calendar-picker-indicator {
             filter: invert(1);
             cursor: pointer;
         }
 
-        /* Custom Phone Input Styling to match Aura theme */
+        /* Aura Premium Phone Input Integration */
         .phone-input-aura {
             display: flex !important;
             align-items: center !important;
-            background: rgba(255, 255, 255, 0.04) !important;
+            background: rgba(255, 255, 255, 0.03) !important;
             border: 1px solid rgba(255, 255, 255, 0.1) !important;
             border-radius: 1rem !important;
             padding: 0 1.25rem !important;
             transition: all 0.3s ease !important;
+            height: 56px; /* Matches other inputs */
         }
         .phone-input-aura:focus-within {
             border-color: #8ecd24 !important;
-            background: rgba(255, 255, 255, 0.07) !important;
+            background: rgba(255, 255, 255, 0.06) !important;
             box-shadow: 0 0 15px rgba(142, 205, 36, 0.1) !important;
         }
         .phone-input-aura input {
@@ -91,24 +85,32 @@
             border: none !important;
             color: white !important;
             font-size: 0.875rem !important;
-            padding: 1.125rem 0 !important;
+            padding: 0 !important;
             outline: none !important;
             width: 100% !important;
             margin-left: 0.75rem !important;
+            font-weight: 500;
         }
-        .phone-input-error {
-            border-color: rgba(239, 68, 68, 0.5) !important;
+        .phone-input-aura input::placeholder {
+            color: rgba(255, 255, 255, 0.2);
         }
-        /* Dark mode flag dropdown */
-        .PhoneInputCountrySelect {
+        .phone-input-aura .PhoneInputCountrySelect {
             background-color: #0b1c1c !important;
             color: white !important;
-            cursor: pointer !important;
         }
-        .PhoneInputCountryIcon {
-            width: 24px !important;
-            height: 18px !important;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.5) !important;
+        
+        .field-error {
+            border-color: rgba(239, 68, 68, 0.5) !important;
+            box-shadow: 0 0 10px rgba(239, 68, 68, 0.1) !important;
+        }
+
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            25% { transform: translateX(-4px); }
+            75% { transform: translateX(4px); }
+        }
+        .animate-shake {
+            animation: shake 0.2s ease-in-out 0s 2;
         }
     </style>
     <!-- Import map -->
