--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,25 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Rental Aura | Car Rental in Albania</title>
+
+<meta name="description" content="Rental Aura offers premium car rental services in Albania. Book reliable, affordable vehicles in Tirana and across Albania." />
+
+<meta name="keywords" content="car rental Albania, rent a car Tirana, Rental Aura, car hire Albania" />
+
+<meta name="author" content="Rental Aura" />
+
+<meta property="og:title" content="Rental Aura | Premium Car Rental" />
+<meta property="og:description" content="Book your car rental in Albania with Rental Aura. Easy booking, affordable prices, trusted service." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://rentalaura.al" />
+<meta property="og:image" content="https://rentalaura.al/preview.jpg" />
+
+<meta name="twitter:card" content="summary_large_image" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
